Small editing (bold, italic, merging of text)

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Jurisdiction</h2>
-							<p>Saint Kitts and Nevis, also known as ‘Saint Christopher and Nevis’ forms part of the group of islands known as the Lesser Antilles, located some 2,000 km to the southeast of the state of Florida. Saint Kitts and Nevis was home to the first British and French colonies in the Caribbean, and thus has also been titled "The Mother Colony of the West Indies". The country has beautiful beaches, reefs, wonderful cool climate, enjoyable throughout the year. The country is also well connected by direct and easy flights from Canada, many cities in the US, Europe, and most Caribbean airliners.</p>
+							<p>Saint Kitts and Nevis, also known as <b>‘Saint Christopher and Nevis’</b> forms part of the group of islands known as the Lesser Antilles, located some 2,000 km to the southeast of the state of Florida. Saint Kitts and Nevis was home to the first British and French colonies in the Caribbean, and thus has also been titled "The Mother Colony of the West Indies". The country has beautiful beaches, reefs, wonderful cool climate, enjoyable throughout the year. The country is also well connected by direct and easy flights from Canada, many cities in the US, Europe, and most Caribbean airliners.</p>
 							<ul class="actions stacked">
 								<li><a href="#contact" class="button big wide smooth-scroll-middle">Learn More</a></li>
 							</ul>
@@ -86,8 +86,10 @@
 				<!-- Five -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Track Record</h2>
-							<p>We already have a lengthy proven track-record of successful applicants, and we have assisted numerous clients from around the world, including jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Germany</b>, <b>Japan</b>, to successfully obtain citizenship.  If your current nationality is limiting your ability to freely travel, bank, invest or feel secure, a second citizenship/passport will literally open up a world of new possibilities for you and your family. Qualified applicants can enjoy greater freedom and increased stability for themselves, their spouse, and any number of dependent children.</p>
+							<h2>Successful Track Record</h2>
+							<p>Our team already has a lengthy proven track-record of successful applicants, and we have assisted numerous clients from around the world, including jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Germany</b>, <b>Japan</b>, to successfully obtain citizenship.
+							<p>If your current nationality is limiting your ability to freely travel, bank, invest or feel secure, a second citizenship/passport will literally open up a world of new possibilities for you and your family. Qualified applicants can enjoy greater freedom and increased stability for themselves, their spouse, and any number of dependent children.</p>
+							<p>Our team also facilitates citizenship applications in any country that currently offers reputable economic citizenship programs (including <i>Saint Lucia</i>, <i>Antigua and Barbuda</i>, <i>Dominica</i>, <i>Grenada</i>, <i>Turkey</i>, <i>Malta</i>, and <i>Vanuatu</i>).</p>
 						</div>
 
 						<!-- Removing Gallery
@@ -258,17 +260,17 @@
 								<section>
 									<span class="icon solid style2 major fa-save"></span>
 									<h3>Required Residency</h3>
-									<p>There is no requirement to live in Saint Kitts and Nevis, but you are fully entitled to live there, as such residency is fully optional and not mandatory</p>
+									<p>There is no requirement to live or reside in Saint Kitts and Nevis, but you are fully entitled to live there, as such residency is fully <b>optional</b> and not mandatory</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-chart-bar"></span>
 									<h3>Dependents</h3>
-									<p>You, your spouse, your dependents (depending on age and economical relationship siblings, parents, etc.) as well as your descendants can enjoy full citizenship for life</p>
+									<p>You, your spouse, your dependents (depending on age and economical relationship siblings, children, parents, etc.) as well as your descendants can enjoy full citizenship for life, family members can also be added later</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-wifi"></span>
 									<h3>Discretion</h3>
-									<p>Proper discretion with respect to citizenship, ensuring that one’s citizenship status is not disclosed to third parties, short term investment in exchange for a lifetime citizenship, a safety net for the family in an unpredictable word, family members (such as spouse, child and siblings, etc.) can also be added later</p>
+									<p>Proper discretion with respect to citizenship, ensuring that one’s citizenship status is not disclosed to third parties, short term investment in exchange for a lifetime citizenship, a safety net for the family in an unpredictable word</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-cog"></span>
@@ -323,11 +325,11 @@
 												</dd>
 												<dt>2. Can I contact the Citizenship by Investment Unit (CIU) directly?</dt>
 												<dd>
-													<p>The CIU only engages with ‘Authorized Persons’. An ‘Authorized Person’ is an individual or entity approved by the Financial Services Regulatory Commission (FRSC) of Saint Kitts and Nevis licensed to conduct corporate or trust services in Saint Kitts and Nevis. An ‘Authorized Person’ is appointed by the main applicant by way of Limited Power of Attorney to act on their behalf in relation to all matters regarding their Citizenship by Investment application. The ‘Authorized Person’ is required to provide professional advice, assist and give details regarding the application process and help with the preparation and submission of an application for Citizenship by investment and its supporting documents. The ‘Authorized Person’ will communicate with the Citizenship by Investment Unit and maintain a point of contact to review all matters surrounding the application, make payments and submit and collect all important correspondences.</p>
+													<p>No, the CIU only engages with ‘Authorized Persons’. An ‘Authorized Person’ is an individual or entity approved by the Financial Services Regulatory Commission (FRSC) of Saint Kitts and Nevis licensed to conduct corporate or trust services in Saint Kitts and Nevis. An ‘Authorized Person’ is appointed by the main applicant by way of Limited Power of Attorney to act on their behalf in relation to all matters regarding their Citizenship by Investment application. The ‘Authorized Person’ is required to provide professional advice, assist and give details regarding the application process and help with the preparation and submission of an application for Citizenship by investment and its supporting documents. The ‘Authorized Person’ will communicate with the Citizenship by Investment Unit and maintain a point of contact to review all matters surrounding the application, make payments and submit and collect all important correspondences.</p>
 												</dd>
 												<dt>3. Are the application forms available online?</dt>
 												<dd>
-													<p>The application forms for Citizenship by Investment can only be obtained and submitted to the Citizenship by Investment Unit by an ‘Authorized Person’.</p>
+													<p>No, the application forms for Citizenship by Investment can only be obtained and submitted to the Citizenship by Investment Unit by an ‘Authorized Person’.</p>
 												</dd>
 												<dt>4. How long does the application process take?</dt>
 												<dd>
@@ -335,7 +337,7 @@
 												</dd>
 												<dt>5. Can I submit my application in a language other than English?</dt>
 												<dd>
-													<p>No. All applications and documents that are not in English are not prescribed or accepted by the Citizenship by Investment Unit, and every foreign language document must be submitted along with a certified translated English version.</p>
+													<p>No. All applications and documents that are not in English are not prescribed or accepted by the Citizenship by Investment Unit, and every foreign language document must be submitted along with a <b>certified translated English</b> version.</p>
 												</dd>
 												<dt>6. Can two or more applicants apply for citizenship by investment together?</dt>
 												<dd>
@@ -355,7 +357,7 @@
 												</dd>
 												<dt>10. What is the maximum number of dependents allowed by a main applicant?</dt>
 												<dd>
-													<p>There is no limit on the number of permitted dependents.</p>
+													<p>There is <b>no limit</b> on the number of permitted dependents.</p>
 												</dd>
 												<dt>11. What are the fees involved?</dt>
 												<dd>
@@ -371,15 +373,11 @@
 												</dd>
 												<dt>14. Do I have to reside in Saint Kitts and Nevis in order to apply for citizenship?</dt>
 												<dd>
-													<p>. Residing in Saint Kitts and Nevis is not required when applying for citizenship using the Citizenship by Investment Option.</p>
+													<p>Residing in Saint Kitts and Nevis is <b>not</b> required when applying for citizenship using the Citizenship by Investment Option.</p>
 												</dd>
-												<dt>15. What is a Police Certificate?</dt>
+												<dt>15. What is a police certificate and who is required to produce a police certificate?</dt>
 												<dd>
-													<p>A police certificate refers to a statement from a national law enforcement authority on the status of a person’s criminal record. It is also referred to as “certificate of no criminal record” or “police clearance record”.</p>
-												</dd>
-												<dt>16. Who is required to produce a police certificate?</dt>
-												<dd>
-													<p>Each main applicant and all permitted dependents 16 years and older are required to produce a police certificate. Our team can provide you with some support regarding the process of obtention of the certificate.</p>
+													<p>A police certificate refers to a statement from a national law enforcement authority on the status of a person’s criminal record. It is also referred to as “certificate of no criminal record” or “police clearance record”. Each main applicant and all permitted dependents 16 years and older are required to produce a police certificate. Our team can easily provide you with adequate support regarding the process of obtention of the certificate.</p>
 												</dd>
 											</dl>
 
@@ -394,7 +392,7 @@
 					<section class="wrapper style1 align-center" id="contact">
 						<div class="inner medium">
 							<h2>Get in touch to learn more</h2>
-							<h3>We can arrange for online video meetings early into the process, to help provide you with any additional details.</h3>
+							<h3>We can easily arrange online video meetings early into the process, to help provide you with any additional details.</h3>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field half">
