Small edits (bold, <br>, etc) on format

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 						<div class="content">
 							<h2>Business Practices</h2>
 							<p>Our firm processes citizenship applications directly in Saint Kitts and Nevis, enabling us to be apprised of new developments, so our clients are always well-informed in advance of any changes, and can rely on our support and expertise throughout the procedure and even afterwards.</p>
+							<p>If your current nationality is limiting your ability to freely travel, bank, invest or feel secure, a second citizenship/passport will literally open up a world of new possibilities for you and your family. Qualified applicants can enjoy greater freedom and increased stability for themselves, their spouse, and any number of dependent children.</p>
 							<ul class="actions stacked">
 								<li><a href="#contact" class="button big wide smooth-scroll-middle">Learn More</a></li>
 							</ul>
@@ -88,8 +89,7 @@
 						<div class="inner">
 							<h2>Successful Track Record</h2>
 							<p>Our team already has a lengthy proven track-record of successful applicants, and we have assisted numerous clients from around the world, including jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Germany</b>, <b>Japan</b>, to successfully obtain citizenship.
-							<p>If your current nationality is limiting your ability to freely travel, bank, invest or feel secure, a second citizenship/passport will literally open up a world of new possibilities for you and your family. Qualified applicants can enjoy greater freedom and increased stability for themselves, their spouse, and any number of dependent children.</p>
-							<p>Our team also facilitates citizenship applications in any country that currently offers reputable economic citizenship programs (including <i>Saint Lucia</i>, <i>Antigua and Barbuda</i>, <i>Dominica</i>, <i>Grenada</i>, <i>Turkey</i>, <i>Malta</i>, and <i>Vanuatu</i>).</p>
+							<p>Our team also facilitates citizenship applications in any country that currently offers reputable economic citizenship programs <br>(including <i>Saint Lucia</i>, <i>Antigua and Barbuda</i>, <i>Dominica</i>, <i>Grenada</i>, <i>Turkey</i>, <i>Malta</i>, and <i>Vanuatu</i>).</p>
 						</div>
 
 						<!-- Removing Gallery
