Adding another "Learn More" button before Q&A

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 									</div>
 								</article>
 							</div>
-						-->
+						All images above were set in COMMENT mode-->
 
 					</section>
 
@@ -298,6 +298,9 @@
 									<p>Saint Kitts and Nevis is well known and particularly famous for beautiful beaches, pristine tropical forests and friendly locals, the ability to live and work freely in multiple countries, greater future educational opportunities for children, Saint Kitts and Nevis is also very safe, walkable and has great weather</p>
 								</section>
 							</div>
+							<ul class="actions stacked">
+								<li><a href="#contact" class="button big wide smooth-scroll-middle">Learn More</a></li>
+							</ul>
 						</div>
 					</section>
 				
