--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 								<section>
 									<span class="icon style2 major fa-gem"></span>
 									<h3>Visa</h3>
-									<p>Visa-free access to nearly 150 countries and territories worldwide, including the United Kingdom, European Union, Hong Kong and Singapore</p>
+									<p>Visa-free access to nearly 150 countries and territories worldwide, including the United Kingdom, European Union, Hong Kong and Singapore. Easy of residency in CARICOM member countries, and opportunity to travel (or potentially work) in any of the other OECS member states</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-save"></span>
