--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 								<section>
 									<span class="icon style2 major fa-gem"></span>
 									<h3>Visa</h3>
-									<p>Visa-free access to nearly 150 countries and territories worldwide, including the United Kingdom, European Union, Hong Kong and Singapore. Easy of residency in CARICOM member countries, and opportunity to travel (or potentially work) in any of the other OECS member states</p>
+									<p>Visa-free access to nearly 150 countries and territories worldwide, including the United Kingdom, European Union, Hong Kong and Singapore. Ease of residency in <b>CARICOM</b> member countries, and opportunity to travel (or potentially work) in any of the <b>OECS</b> member states.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-save"></span>
@@ -265,12 +265,12 @@
 								<section>
 									<span class="icon solid style2 major fa-chart-bar"></span>
 									<h3>Dependents</h3>
-									<p>You, your spouse, your dependents (depending on age and economical relationship siblings, children, parents, etc.) as well as your descendants can enjoy full citizenship for life, family members can also be added later</p>
+									<p>You, your spouse, your dependents (depending on age and economical relationship <b>siblings</b>, <b>children</b>, <b>parents</b>, etc.) as well as your <b>descendants</b> can enjoy full citizenship for life, family members can also be added later</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-wifi"></span>
 									<h3>Discretion</h3>
-									<p>Proper discretion with respect to citizenship, ensuring that one’s citizenship status is not disclosed to third parties, short term investment in exchange for a lifetime citizenship, a safety net for the family in an unpredictable word</p>
+									<p>Proper discretion with respect to citizenship, ensuring that one’s citizenship status is not disclosed to third parties, as such this represents a short term investment in exchange for a lifetime multigenerational citizenship, and a potential safety net for the family in an unpredictable word</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-cog"></span>
@@ -280,22 +280,22 @@
 								<section>
 									<span class="icon style2 major fa-paper-plane"></span>
 									<h3>Wealth Management</h3>
-									<p>An environment conducive to starting a business, managing wealth and nurturing an investment, the ability to own property in multiple jurisdictions, leaving a family legacy with rights such as citizenship by descent</p>
+									<p>An environment conducive to starting a business, managing wealth and nurturing an investment, the ability to own property in multiple jurisdictions, giving family legacy with rights such as citizenship by descent, granting potentially greater future educational opportunities for children</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-desktop"></span>
 									<h3>Efficient Process</h3>
-									<p>A hassle-free and efficient application process which rapidly confirms the outcome of your application. There are no requirements for previous investor or business experience, no requirements either for English language proficiency or for attending any interview</p>
+									<p>A hassle-free and efficient application process, which rapidly confirms the outcome of your application. There are no requirements for previous investor or business experience, no requirements either for English language proficiency, or for attending any interview</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-sync-alt"></span>
 									<h3>Accelerated Process</h3>
-									<p>There is also an Accelerated Application Process (AAP) approved by the Government of Saint Kitts and Nevis which allows applications with the Citizenship by Investment Program to be accelerated and fast tracked. Interested persons applying utilizing the AAP will still be required to meet all mandatory criteria and submit the necessary supporting documents to apply</p>
+									<p>There is also an Accelerated Application Process (AAP) approved by the Government of Saint Kitts and Nevis which allows applications to be accelerated (fast tracked). Interested persons applying utilizing the AAP will still be required to meet all criteria and submit the necessary documents</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-hashtag"></span>
 									<h3>Pristine Environment</h3>
-									<p>Saint Kitts and Nevis is well known and particularly famous for beautiful beaches, pristine tropical forests and friendly locals, the ability to live and work freely in multiple countries, greater future educational opportunities for children, Saint Kitts and Nevis is also very safe, walkable and has great weather</p>
+									<p>Saint Kitts and Nevis is well known and particularly famous for its beautiful beaches, pristine tropical forests and friendly locals, Saint Kitts and Nevis is also very safe, walkable and has great weather</p>
 								</section>
 							</div>
 							<ul class="actions stacked">
