--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Successful Track Record</h2>
-							<p>Our team already has a lengthy proven track-record of successful applicants, and we have assisted numerous clients from around the world, including jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Germany</b>, <b>Japan</b>, to successfully obtain citizenship.
+							<p>Our team already has a lengthy proven track-record of successful applicants, and we have assisted numerous clients from around the world, including jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Germany</b>, <b>Japan</b>, etc., to successfully obtain citizenship.
 							<p>Our team also facilitates citizenship applications in any country that currently offers reputable economic citizenship programs <br>(including <i>Saint Lucia</i>, <i>Antigua and Barbuda</i>, <i>Dominica</i>, <i>Grenada</i>, <i>Turkey</i>, <i>Malta</i>, and <i>Vanuatu</i>).</p>
 						</div>
 
