Removing a few (unnecessary) words

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Saint Kitts and Nevis Citizenship</h2>
-							<p>The Saint Kitts and Nevis Citizenship by Investment Program was established in 1984, making it the oldest program of this kind in the world. In close to 40 years of operation, it has distinguished itself by its exceptional investment options and meticulous due diligence procedures. To this day, Saint Kitts and Nevis remains the world’s most reputable jurisdiction for the conferral of citizenship by investment.</p>
+							<p>The Saint Kitts and Nevis Citizenship by Investment Program was <b>established in 1984</b>, making it the oldest program of this kind in the world. In close to 40 years of operation, it has distinguished itself by its exceptional investment options and meticulous due diligence procedures. To this day, Saint Kitts and Nevis remains the world’s most reputable jurisdiction for the conferral of citizenship by investment.</p>
 							<ul class="actions stacked">
 								<li><a href="#contact" class="button big wide smooth-scroll-middle">Learn More</a></li>
 							</ul>
@@ -59,7 +59,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Jurisdiction</h2>
-							<p>Saint Kitts and Nevis, also known as <b>‘Saint Christopher and Nevis’</b> forms part of the group of islands known as the Lesser Antilles, located some 2,000 km to the southeast of the state of Florida. Saint Kitts and Nevis was home to the first British and French colonies in the Caribbean, and thus has also been titled "The Mother Colony of the West Indies". The country has beautiful beaches, reefs, wonderful cool climate, enjoyable throughout the year. The country is also well connected by direct and easy flights from Canada, many cities in the US, Europe, and most Caribbean airliners.</p>
+							<p>Saint Kitts and Nevis, also known as <b>‘Saint Christopher and Nevis’</b> forms part of the group of islands known as the Lesser Antilles, located some 2,000 km to the southeast of the state of Florida. Saint Kitts and Nevis was home to the first British and French colonies in the Caribbean, and thus has also been titled "The Mother Colony of the West Indies". The country has beautiful beaches, reefs, wonderful cool climate, enjoyable throughout the year. The country is also well connected by easy and <b>direct flights</b> from Europe, Canada, multiple cities in the US, and most Caribbean airliners.</p>
 							<ul class="actions stacked">
 								<li><a href="#contact" class="button big wide smooth-scroll-middle">Learn More</a></li>
 							</ul>
@@ -73,8 +73,8 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Business Practices</h2>
-							<p>Our firm processes citizenship applications directly in Saint Kitts and Nevis, enabling us to be apprised of new developments, so our clients are always well-informed in advance of any changes, and can rely on our support and expertise throughout the procedure and even afterwards.</p>
-							<p>If your current nationality is limiting your ability to freely travel, bank, invest or feel secure, a second citizenship/passport will literally open up a world of new possibilities for you and your family. Qualified applicants can enjoy greater freedom and increased stability for themselves, their spouse, and any number of dependent children.</p>
+							<p>Our firm specializes in the processing of citizenship applications directly in Saint Kitts and Nevis, enabling us to be apprised of all new developments, so our clients are always well-informed in advance of any changes, and can rely on our support and expertise throughout the procedure.</p>
+							<p>If your current nationality is limiting your ability to freely travel, bank, invest or feel secure, a second citizenship/passport will open up a world of new possibilities for you and your family. Qualified applicants can enjoy greater freedom and increased stability for themselves, their spouse, and any number of dependent (children, siblings, parents, etc).</p>
 							<ul class="actions stacked">
 								<li><a href="#contact" class="button big wide smooth-scroll-middle">Learn More</a></li>
 							</ul>
@@ -88,7 +88,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Successful Track Record</h2>
-							<p>Our team already has a lengthy proven track-record of successful applicants, and we have assisted numerous clients from around the world, including jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Germany</b>, <b>Japan</b>, etc., to successfully obtain citizenship.
+							<p>Our team already has a lengthy proven track-record of applicants, and we have assisted numerous clients from around the world, including jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Germany</b>, <b>Japan</b>, etc., to obtain citizenship.
 							<p>Our team also facilitates citizenship applications in any country that currently offers reputable economic citizenship programs <br>(including <i>Saint Lucia</i>, <i>Antigua and Barbuda</i>, <i>Dominica</i>, <i>Grenada</i>, <i>Turkey</i>, <i>Malta</i>, and <i>Vanuatu</i>).</p>
 						</div>
 
@@ -255,22 +255,22 @@
 								<section>
 									<span class="icon style2 major fa-gem"></span>
 									<h3>Visa</h3>
-									<p>Visa-free access to nearly 150 countries and territories worldwide, including the United Kingdom, European Union, Hong Kong and Singapore. Ease of residency in <b>CARICOM</b> member countries, and opportunity to travel (or potentially work) in any of the <b>OECS</b> member states.</p>
+									<p>Visa-free access to nearly 150 countries and territories worldwide, including the United Kingdom, European Union, Hong Kong and Singapore, ease of residency applications in <b>CARICOM</b> member countries, as well as opportunities to travel (or even potentially work) in any of the <b>OECS</b> member states.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-save"></span>
 									<h3>Required Residency</h3>
-									<p>There is no requirement to live or reside in Saint Kitts and Nevis, but you are fully entitled to live there, as such residency is fully <b>optional</b> and not mandatory</p>
+									<p>There is no requirement to live or reside in Saint Kitts and Nevis, but you are entitled to live there, as such residency is <b>optional</b> and not mandatory, there are no visitation requirements to apply and obtain the Saint Kitts and Nevis citizenship, and the jurisdiction freely permits dual/multiple citizenship</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-chart-bar"></span>
 									<h3>Dependents</h3>
-									<p>You, your spouse, your dependents (depending on age and economical relationship <b>siblings</b>, <b>children</b>, <b>parents</b>, etc.) as well as your <b>descendants</b> can enjoy full citizenship for life, family members can also be added later</p>
+									<p>You, your spouse, your dependents (depending on age and economical relationship <b>siblings</b>, <b>children</b>, <b>parents</b>, etc.) as well as your <b>descendants</b> can enjoy citizenship for life, family members can also be added later</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-wifi"></span>
 									<h3>Discretion</h3>
-									<p>Proper discretion with respect to citizenship, ensuring that one’s citizenship status is not disclosed to third parties, as such this represents a short term investment in exchange for a lifetime multigenerational citizenship, and a potential safety net for the family in an unpredictable word</p>
+									<p>Discretion with respect to citizenship, ensuring that one’s citizenship status is not disclosed to third parties, as such this represents a short term investment in exchange for a lifetime multigenerational citizenship, and a potential safety net for the family in an unpredictable word</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-cog"></span>
@@ -280,22 +280,22 @@
 								<section>
 									<span class="icon style2 major fa-paper-plane"></span>
 									<h3>Wealth Management</h3>
-									<p>An environment conducive to starting a business, managing wealth and nurturing an investment, the ability to own property in multiple jurisdictions, giving family legacy with rights such as citizenship by descent, granting potentially greater future educational opportunities for children</p>
+									<p>An environment conducive to starting a business, managing wealth and nurturing an investment, the ability to own property in multiple jurisdictions, giving family legacy with rights such as citizenship by descent, granting greater future educational opportunities for children</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-desktop"></span>
 									<h3>Efficient Process</h3>
-									<p>A hassle-free and efficient application process, which rapidly confirms the outcome of your application. There are no requirements for previous investor or business experience, no requirements either for English language proficiency, or for attending any interview</p>
+									<p>A hassle-free and efficient application process, which rapidly confirms the outcome of your application. There are no requirements for previous investor or business experience, nor English language proficiency, or for attending any interview at any stage during the application process</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-sync-alt"></span>
 									<h3>Accelerated Process</h3>
-									<p>There is also an Accelerated Application Process (AAP) approved by the Government of Saint Kitts and Nevis which allows applications to be accelerated (fast tracked). Interested persons applying utilizing the AAP will still be required to meet all criteria and submit the necessary documents</p>
+									<p>There is also an Accelerated Application Process (AAP) approved by the Government of Saint Kitts and Nevis which allows applications to be fast-tracked. Interested applicants will still be required to meet all criteria and submit the necessary documents</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-hashtag"></span>
 									<h3>Pristine Environment</h3>
-									<p>Saint Kitts and Nevis is well known and particularly famous for its beautiful beaches, pristine tropical forests and friendly locals, Saint Kitts and Nevis is also very safe, walkable and has great weather</p>
+									<p>Saint Kitts and Nevis is well known and famous for its beautiful beaches, pristine tropical forests and friendly locals, Saint Kitts and Nevis is also very safe, walkable and has great weather</p>
 								</section>
 							</div>
 							<ul class="actions stacked">
@@ -311,7 +311,7 @@
 							<!--
 							<p>Finally, here are some additional elements you <em>might</em> find useful (and yup, they look fine with any <span class="demo-controls">appearance</span>).</p>
 							-->
-							<p>Finally, here are some frequently asked questions and answers you might find useful.</p>
+							<p>Here are some frequently asked questions and answers you might find useful.</p>
 							<div class="index align-left">
 								
 								<!-- Definition List -->
